# sqlalchemy-facets

./: .gitignore  .travis.yml  README.rst  _apply_filter.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  sqlalchemy_facets.py
docs/: conf.py  index.rst
sqlalchemy_facets/: __init__.py  _facet.py  api.py  facet.py  formatter.py  mapper.py  query.py  result.py  types.py  utils.py
sqlalchemy_facets/facet/: __init__.py  base.py  range.py  terms.py
tests/: conftest.py  db.py  fixtures.py  test_core.py  test_faceted_query.py  test_mapper.py  test_query_api.py  test_range.py  test_sub_facets.py  test_terms.py  test_utils.py
