[tool.poetry]
name = "sqlalchemy-facets"
version = "0.1.3"
description = "Faceted search for SQLAlchemy"
authors = ["Thibaut Frain <thibaut.frain@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6, <4"
sqlalchemy = "^1.3.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
factory-boy = "^2.12.0"
psycopg2-binary = "^2.8.4"
sphinx_autodoc_typehints = "^1.10.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
